--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "6.8.0",
+    "eslint-config-htmlacademy": "0.5.2",
+    "eslint-plugin-react": "7.19.0"
   }
 }
