--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,5 +1,5 @@
 env:
-  es6: true
+  es10: true
   browser: true
   commonjs: true
   jest: true
@@ -9,7 +9,7 @@ extends: ['htmlacademy/es6', 'plugin:react/recommended']
 parserOptions:
   ecmaFeatures:
     jsx: true
-  ecmaVersion: 2019
+  ecmaVersion: 6
   sourceType: module
 
 plugins: ['react']
@@ -18,5 +18,5 @@ settings:
   react:
     version: '16'
 
-rule:
-  prop-types: 'disable'
+# rule:
+#   prop-types: 'disable'
