--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.1.0",
     "eslint-config-htmlacademy": "0.5.2",
     "eslint-plugin-react": "7.19.0"
   }
